--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <%= link_to "Home", welcome_index_path %>
+    <%= link_to "About", welcome_about_path %>
+    <%= link_to "contact", welcome_contact_path %>
+    <%= link_to "Features", welcome_features_path %>
+    <%= link_to "Login", welcome_login_path %>
     <%= yield %>
   </body>
 </html>
