--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= link_to "contact", welcome_contact_path %>
     <%= link_to "Features", welcome_features_path %>
     <%= link_to "Login", welcome_login_path %>
+      <%= link_to "Invoices", invoices_path %>
     <%= yield %>
   </body>
 </html>
