--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,31 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Invoices</h1>
+<div class="media">
+  <div class="media-body">
+    <table  class="table table-hover>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Company</th>
-      <th>Place</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Company</th>
+              <th>Place</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-  <tbody>
-    <% @invoices.each do |invoice| %>
-      <tr>
-        <td><%= invoice.date %></td>
-        <td><%= invoice.company %></td>
-        <td><%= invoice.place %></td>
-        <td><%= link_to 'Show', invoice %></td>
-        <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-        <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+        <tbody>
+          <% @invoices.each do |invoice| %>
+            <tr>
+              <td><%= invoice.date.strftime("%Y-%m-%d") %></td>
+              <td><%= invoice.company %></td>
+              <td><%= invoice.place %></td>
+              <td><%= link_to 'Show', invoice,class: 'btn btn-small btn-success' %></td>
+              <td><%= link_to 'Edit', edit_invoice_path(invoice),class: 'btn btn-small btn-danger' %></td>
+              <td><%= link_to 'Destroy', invoice, method: :delete,class: 'btn btn-small btn-warning', data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+  </div>
+</div>
 <br>
 
 <%= link_to 'New Invoice', new_invoice_path %>
